add all info text

--- a/aroundus-main.html
+++ b/aroundus-main.html
@@ -82,27 +82,19 @@
           <div class="inner">
             <h2 class="major">Introducing ARoundUs</h2>
             <p>
-              Morbi mattis mi consectetur tortor elementum, varius pellentesque
-              velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac
-              scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis
-              lacinia velit aliquet. Duis non efficitur nisi, id malesuada
-              justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus
-              leo donec vel dolor at arcu tincidunt bibendum. Interdum et
-              malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet
-              justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel
-              ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit
-              accumsan cursus. Etiam ut gravida sapien.
+              ARoundUs introduce you a new way of exploring the world with
+              infomation. With the help of AR or Augmented Reality, user can
+              interact 3D objects in real-world environment. By using AR, the
+              app can recognize the real-world objects and able to show related
+              infomation in realtime.
             </p>
 
             <p>
-              Vestibulum ultrices risus velit, sit amet blandit massa auctor sit
-              amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor
-              mollis id vel diam. Praesent sit amet posuere risus, eu faucibus
-              lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta
-              quam. Proin nec commodo, vel scelerisque nisi scelerisque.
-              Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor
-              orci eu dolor consectetur, interdum ullamcorper ante tincidunt.
-              Mauris felis nec felis elementum varius.
+              User can use their phone and point the camera to any places or
+              objects that they are interested. The app will try to recognize
+              those objects and pop up some infomation along side with that
+              object. Infomation can be in differnt forms of content such as
+              text, images and videos.
             </p>
 
             <a class="image"
@@ -139,8 +131,15 @@
 
             <h3 class="major">Implementation Tools</h3>
             <p>
-              Cras mattis ante fermentum, malesuada neque vitae, eleifend erat.
-              Phasellus non pulvinar erat.
+              The following are the tools and frameworks used to develop this
+              application. <br />
+              The app's user interface are made using UIKit. The main apple's
+              framework used to create user interface for iOS. <br />
+              The app utilze ARKit, an apple's framework used to create
+              augmented reality using iOS device camera and motion features to
+              produce augmented reality experiences. The app recognize
+              interested objects and brings related information to show it in 3D
+              world.
             </p>
 
             <h4>Tools and Frameworks</h4>
