--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
             /></a>
             <div class="content">
               <h2 class="major">ARoundUs</h2>
-              <p>The best ar app on the planet</p>
+              <p>A new way to look and explore what's around you. 
+                Infomation is everywhere and it's easier than ever to just point 
+                your phone to see info in realtime. </p>
               <a href="aroundus-main.html" class="special">Learn more</a>
             </div>
           </div>
@@ -87,7 +89,8 @@
             /></a>
             <div class="content">
               <h2 class="major">MeChat</h2>
-              <p>The best chat app on the planet</p>
+              <p>The simple chat application with unique modern look. 
+                Fast, secure and reliable way to send text messages.  </p>
               <a href="mechat-main.html" class="special">Learn more</a>
             </div>
           </div>
@@ -104,7 +107,8 @@
             /></a>
             <div class="content">
               <h2 class="major">ToDone</h2>
-              <p>The best todo app on the planet</p>
+              <p>Get things done with ToDone, easy todolist and task managing application 
+                to help you organize tasks in categories</p>
               <a href="todone-main.html" class="special">Learn more</a>
             </div>
           </div>
@@ -178,10 +182,8 @@
         <div class="inner">
           <h2 class="major">Get in touch</h2>
           <p>
-            Cras mattis ante fermentum, malesuada neque vitae, eleifend erat.
-            Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis
-            egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus
-            in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.
+            The following are my contacts. Please email me if you are interested in my projects. 
+            Feel free to lookup my github repositores for my project's source code. 
           </p>
           <!-- <form method="post" action="#">
             <div class="fields">
@@ -219,13 +221,14 @@
               <a href="https://github.com/niabwork2">niabwork2</a>
             </li>
 
-            <li class="icon brands fa-facebook-f">
+            <!-- <li class="icon brands fa-facebook-f">
               <a href="#">facebook.com/untitled-tld</a>
-            </li>
+            </li> -->
             
-            <li class="icon brands fa-instagram">
+            <!-- <li class="icon brands fa-instagram">
               <a href="#">instagram.com/untitled-tld</a>
-            </li>
+            </li> -->
+
           </ul>
           <ul class="copyright">
 
