--- a/mechat-main.html
+++ b/mechat-main.html
@@ -78,27 +78,15 @@
           <div class="inner">
             <h2 class="major">Introducing MeChat</h2>
             <p>
-              Morbi mattis mi consectetur tortor elementum, varius pellentesque
-              velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac
-              scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis
-              lacinia velit aliquet. Duis non efficitur nisi, id malesuada
-              justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus
-              leo donec vel dolor at arcu tincidunt bibendum. Interdum et
-              malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet
-              justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel
-              ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit
-              accumsan cursus. Etiam ut gravida sapien.
+              MeChat is an simple messaging app that allows user to send text
+              messages to other users throught the internet.
             </p>
 
             <p>
-              Vestibulum ultrices risus velit, sit amet blandit massa auctor sit
-              amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor
-              mollis id vel diam. Praesent sit amet posuere risus, eu faucibus
-              lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta
-              quam. Proin nec commodo, vel scelerisque nisi scelerisque.
-              Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor
-              orci eu dolor consectetur, interdum ullamcorper ante tincidunt.
-              Mauris felis nec felis elementum varius.
+              First user need to register account or signup to the application.
+              User can register with their email address and create a password.
+              After user have an registered account, user can login to the
+              application and enter chatroom.
             </p>
 
             <a class="image"
@@ -135,8 +123,15 @@
 
             <h3 class="major">Implementation Tools</h3>
             <p>
-              Cras mattis ante fermentum, malesuada neque vitae, eleifend erat.
-              Phasellus non pulvinar erat.
+              The following are the tools and frameworks used to develop this
+              application. <br />
+              The app's user interface are made using UIKit. The main apple's
+              framework used to create user interface for iOS. <br />
+              The back-end solution are handled by firebase, a platform
+              developed by google for creating mobile and web applications. User
+              accounts and messages are handled by cloud firestore, a
+              cloud-hosted database that can be accessed directly via native
+              SDKs.
             </p>
 
             <h4>Tools and Frameworks</h4>
