--- a/todone-main.html
+++ b/todone-main.html
@@ -78,27 +78,18 @@
           <div class="inner">
             <h2 class="major">Introducing ToDone</h2>
             <p>
-              Morbi mattis mi consectetur tortor elementum, varius pellentesque
-              velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac
-              scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis
-              lacinia velit aliquet. Duis non efficitur nisi, id malesuada
-              justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus
-              leo donec vel dolor at arcu tincidunt bibendum. Interdum et
-              malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet
-              justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel
-              ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit
-              accumsan cursus. Etiam ut gravida sapien.
+              A better way to organize your task in daily life. ToDone helps
+              user create and save task on their phone without the need of
+              internet connection.
             </p>
 
             <p>
-              Vestibulum ultrices risus velit, sit amet blandit massa auctor sit
-              amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor
-              mollis id vel diam. Praesent sit amet posuere risus, eu faucibus
-              lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta
-              quam. Proin nec commodo, vel scelerisque nisi scelerisque.
-              Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor
-              orci eu dolor consectetur, interdum ullamcorper ante tincidunt.
-              Mauris felis nec felis elementum varius.
+              User can simply typing the task and make a todo list. When the
+              task is done simply tap to add check mark to the task or remove it
+              by swipe to the right. User can also search the task they want to
+              find by typing at the search bar at the top. The app provides
+              simple interface to add task and organize those tasks by adding it
+              to seperate categories.
             </p>
 
             <a class="image"
@@ -121,6 +112,12 @@
 
             <a class="image"
               ><img
+                src="images/todone-image/delete-mock.png"
+                style="border-radius: 0%; width: 20rem; height: auto"
+            /></a>
+
+            <a class="image"
+              ><img
                 src="images/todone-image/drinks-mock.png"
                 style="border-radius: 0%; width: 20rem; height: auto"
             /></a>
@@ -129,8 +126,13 @@
 
             <h3 class="major">Implementation Tools</h3>
             <p>
-              Cras mattis ante fermentum, malesuada neque vitae, eleifend erat.
-              Phasellus non pulvinar erat.
+              The following are the tools and frameworks used to develop this
+              application. <br />
+              The app's user interface are made using UIKit. The main apple's
+              framework used to create user interface for iOS. <br />
+              The app save and persist those tasks on a device by using
+              CoreData, an object graph and data persistence apple's framework.
+              CoreData helps save application’s permanent data for offline use.
             </p>
 
             <h4>Tools and Frameworks</h4>
