new h3 and 480p new AR video

--- a/aroundus-sub.html
+++ b/aroundus-sub.html
@@ -80,6 +80,13 @@
                 controls
                 style="width: 50%; height: 50%; border-radius: 10px"
               ></video>
+
+              <h3 class="major">AR cam item now</h3>
+              <video
+                src="images/aroundus-image/aroundus-mov-cam.mov"
+                controls
+                style="width: 50%; height: 50%; border-radius: 10px"
+              ></video>
             </a>
           </div>
         </header>
