--- a/aroundus-sub.html
+++ b/aroundus-sub.html
@@ -81,9 +81,9 @@
                 style="width: 50%; height: 50%; border-radius: 10px"
               ></video>
 
-              <h3 class="major">AR cam item now</h3>
+              <h3 class="major">AR cam item 480p</h3>
               <video
-                src="images/aroundus-image/aroundus-mov-cam.mov"
+                src="images/aroundus-image/aroundus-mov-cam-480p.mov"
                 controls
                 style="width: 50%; height: 50%; border-radius: 10px"
               ></video>
