try mov 1080p using github repo link and src tag

--- a/aroundus-sub.html
+++ b/aroundus-sub.html
@@ -82,11 +82,12 @@
               ></video>
 
               <h3 class="major">AR cam item 480p</h3>
-              <video
-                src="https://github.com/niabwork2/portfolio/raw/main/images/aroundus-image/aroundus-mov-cam-1080p.mov"
-                controls
-                style="width: 50%; height: 50%; border-radius: 10px"
-              ></video>
+              <video>
+                <source
+                  src="https://github.com/niabwork2/portfolio/raw/main/images/aroundus-image/aroundus-mov-cam-1080p.mov"
+                  type="video/mov"
+                />
+              </video>
             </a>
           </div>
         </header>
