try mp4 1080p file

--- a/aroundus-sub.html
+++ b/aroundus-sub.html
@@ -81,13 +81,12 @@
                 style="width: 50%; height: 50%; border-radius: 10px"
               ></video>
 
-              <h3 class="major">AR cam item 480p</h3>
-              <video>
-                <source
-                  src="https://github.com/niabwork2/portfolio/raw/main/images/aroundus-image/aroundus-mov-cam-1080p.mov"
-                  type="video/mov"
-                />
-              </video>
+              <h3 class="major">AR cam item 1080p</h3>
+              <video
+                src=""
+                controls
+                style="width: 50%; height: 50%; border-radius: 10px"
+              ></video>
             </a>
           </div>
         </header>
