--- a/aroundus-sub.html
+++ b/aroundus-sub.html
@@ -81,9 +81,9 @@
                 style="width: 50%; height: 50%; border-radius: 10px"
               ></video>
 
-              <h3 class="major">AR cam item 1080p</h3>
+              <h3 class="major">AR cam item 1080p new</h3>
               <video
-                src=""
+                src="https://github.com/niabwork2/portfolio/raw/main/images/aroundus-image/aroundus-mov-cam-1080p.mp4"
                 controls
                 style="width: 50%; height: 50%; border-radius: 10px"
               ></video>
