add mov-chat-test.m4v with git link

--- a/mechat-sub.html
+++ b/mechat-sub.html
@@ -64,7 +64,7 @@
               /> -->
               <h3 class="major">SIGNUP AND LOGIN</h3>
               <video
-                src="images/mechat-image/mechat-mov-chat.mov"
+                src="https://github.com/niabwork2/portfolio/raw/main/images/mechat-image/mov-chat-test.m4v"
                 controls
                 style="width: 100%; height: 100%; border-radius: 10px"
               ></video>
