--- a/aroundus-main.html
+++ b/aroundus-main.html
@@ -97,35 +97,150 @@
               text, images and videos.
             </p>
 
-            <a class="image"
-              ><img
+            <a class="image">
+              <img
                 src="images/aroundus-image/main-mock.png"
-                style="border-radius: 0%; width: 20rem; height: auto"
-            /></a>
+                style="
+                  border-radius: 0%;
+                  width: 20rem;
+                  height: auto;
+                  margin-left: auto;
+                  margin-right: auto;
+                "
+              />
+              <p
+                style="
+                  background-color: #2c2c2c;
+                  border-radius: 2rem;
+                  border-width: medium;
+                  border-color: #85fbac;
+                  border-style: solid;
+                  padding: 3%;
+                "
+              >
+                User can use their phone and point the camera to any places or
+                objects that they are interested. The app will try to recognize
+                those objects and pop up some infomation along side with that
+                object. Infomation can be in differnt forms of content such as
+                text, images and videos.
+              </p>
+            </a>
 
             <a class="image"
               ><img
                 src="images/aroundus-image/info1_mock.png"
-                style="border-radius: 0%; width: 20rem; height: auto"
-            /></a>
+                style="
+                  border-radius: 0%;
+                  width: 20rem;
+                  height: auto;
+                  margin-left: auto;
+                  margin-right: auto;
+                "
+              />
+              <p
+                style="
+                  background-color: #2c2c2c;
+                  border-radius: 2rem;
+                  border-width: medium;
+                  border-color: #85fbac;
+                  border-style: solid;
+                  padding: 3%;
+                "
+              >
+                User can use their phone and point the camera to any places or
+                objects that they are interested. The app will try to recognize
+                those objects and pop up some infomation along side with that
+                object. Infomation can be in differnt forms of content such as
+                text, images and videos.
+              </p></a
+            >
 
             <a class="image"
               ><img
                 src="images/aroundus-image/info2_mock.png"
-                style="border-radius: 0%; width: 20rem; height: auto"
-            /></a>
+                style="
+                  border-radius: 0%;
+                  width: 20rem;
+                  height: auto;
+                  margin-left: auto;
+                  margin-right: auto;
+                "
+              />
+              <p
+                style="
+                  background-color: #2c2c2c;
+                  border-radius: 2rem;
+                  border-width: medium;
+                  border-color: #85fbac;
+                  border-style: solid;
+                  padding: 3%;
+                "
+              >
+                User can use their phone and point the camera to any places or
+                objects that they are interested. The app will try to recognize
+                those objects and pop up some infomation along side with that
+                object. Infomation can be in differnt forms of content such as
+                text, images and videos.
+              </p></a
+            >
 
             <a class="image"
               ><img
                 src="images/aroundus-image/info3_mock.png"
-                style="border-radius: 0%; width: 20rem; height: auto"
-            /></a>
+                style="
+                  border-radius: 0%;
+                  width: 20rem;
+                  height: auto;
+                  margin-left: auto;
+                  margin-right: auto;
+                "
+              />
+              <p
+                style="
+                  background-color: #2c2c2c;
+                  border-radius: 2rem;
+                  border-width: medium;
+                  border-color: #85fbac;
+                  border-style: solid;
+                  padding: 3%;
+                "
+              >
+                User can use their phone and point the camera to any places or
+                objects that they are interested. The app will try to recognize
+                those objects and pop up some infomation along side with that
+                object. Infomation can be in differnt forms of content such as
+                text, images and videos.
+              </p></a
+            >
 
             <a class="image"
               ><img
                 src="images/aroundus-image/info4_mock.png"
-                style="border-radius: 0%; width: 20rem; height: auto"
-            /></a>
+                style="
+                  border-radius: 0%;
+                  width: 20rem;
+                  height: auto;
+                  margin-left: auto;
+                  margin-right: auto;
+                "
+              />
+              <p
+                style="
+                  background-color: #2c2c2c;
+                  border-radius: 2rem;
+                  border-width: medium;
+                  border-color: #85fbac;
+                  border-style: solid;
+                  padding: 3%;
+                "
+              >
+                User can use their phone and point the camera to any places or
+                objects that they are interested. The app will try to recognize
+                those objects and pop up some infomation along side with that
+                object. Infomation can be in differnt forms of content such as
+                text, images and videos.
+              </p></a
+            >
 
             <br /><br /><br /><br />
 
