change whole aroundus page

--- a/aroundus-main.html
+++ b/aroundus-main.html
@@ -93,154 +93,175 @@
               User can use their phone and point the camera to any places or
               objects that they are interested. The app will try to recognize
               those objects and pop up some infomation along side with that
-              object. Infomation can be in differnt forms of content such as
+              object. Infomation can be in different forms of content such as
               text, images and videos.
             </p>
 
+            <!-- Explain App -->
             <a class="image">
-              <img
-                src="images/aroundus-image/main-mock.png"
+              <div
                 style="
-                  border-radius: 0%;
-                  width: 20rem;
-                  height: auto;
-                  margin-left: auto;
-                  margin-right: auto;
-                "
-              />
-              <p
-                style="
-                  background-color: #2c2c2c;
-                  border-radius: 2rem;
-                  border-width: medium;
-                  border-color: #85fbac;
-                  border-style: solid;
-                  padding: 3%;
+                  display: table-cell;
+                  vertical-align: middle;
+                  text-align: center;
                 "
               >
-                User can use their phone and point the camera to any places or
-                objects that they are interested. The app will try to recognize
-                those objects and pop up some infomation along side with that
-                object. Infomation can be in differnt forms of content such as
-                text, images and videos.
-              </p>
+                <a class="image">
+                  <img
+                    src="images/aroundus-image/mock_add_image_iphone12black_portrait.png"
+                    style="
+                      border-radius: 0%;
+                      width: 20rem;
+                      height: auto;
+                      margin-left: auto;
+                      margin-right: auto;
+                    "
+                /></a>
+
+                <a class="image">
+                  <img
+                    src="images/aroundus-image/mock_take_photo_iphone12black_portrait.png"
+                    style="
+                      border-radius: 0%;
+                      width: 20rem;
+                      height: auto;
+                      margin-left: auto;
+                      margin-right: auto;
+                    "
+                /></a>
+
+                <a class="image">
+                  <img
+                    src="images/aroundus-image/mock_add_yellow_iphone12black_portrait.png"
+                    style="
+                      border-radius: 0%;
+                      width: 20rem;
+                      height: auto;
+                      margin-left: auto;
+                      margin-right: auto;
+                    "
+                /></a>
+
+                <p
+                  style="
+                    background-color: #2c2c2c;
+                    border-radius: 2rem;
+                    border-width: medium;
+                    border-color: #85fbac;
+                    border-style: solid;
+                    padding: 3%;
+                  "
+                >
+                  Firstly, user need to add image to the app local storage in
+                  order to help it recognizes images. Go to the add image tab
+                  and tap blue camera icon. User can choose to add image from
+                  camera or photo library. Fill in some information about the
+                  image and tap add image to gallery.
+                </p>
+              </div>
             </a>
 
-            <a class="image"
-              ><img
-                src="images/aroundus-image/info1_mock.png"
+            <a class="image">
+              <div
                 style="
-                  border-radius: 0%;
-                  width: 20rem;
-                  height: auto;
-                  margin-left: auto;
-                  margin-right: auto;
-                "
-              />
-              <p
-                style="
-                  background-color: #2c2c2c;
-                  border-radius: 2rem;
-                  border-width: medium;
-                  border-color: #85fbac;
-                  border-style: solid;
-                  padding: 3%;
+                  display: table-cell;
+                  vertical-align: middle;
+                  text-align: center;
                 "
               >
-                User can use their phone and point the camera to any places or
-                objects that they are interested. The app will try to recognize
-                those objects and pop up some infomation along side with that
-                object. Infomation can be in differnt forms of content such as
-                text, images and videos.
-              </p></a
-            >
+                <a class="image">
+                  <img
+                    src="images/aroundus-image/mock_item_page_iphone12black_portrait.png"
+                    style="
+                      border-radius: 0%;
+                      width: 20rem;
+                      height: auto;
+                      margin-left: auto;
+                      margin-right: auto;
+                    "
+                /></a>
 
-            <a class="image"
-              ><img
-                src="images/aroundus-image/info2_mock.png"
-                style="
-                  border-radius: 0%;
-                  width: 20rem;
-                  height: auto;
-                  margin-left: auto;
-                  margin-right: auto;
-                "
-              />
-              <p
-                style="
-                  background-color: #2c2c2c;
-                  border-radius: 2rem;
-                  border-width: medium;
-                  border-color: #85fbac;
-                  border-style: solid;
-                  padding: 3%;
-                "
-              >
-                User can use their phone and point the camera to any places or
-                objects that they are interested. The app will try to recognize
-                those objects and pop up some infomation along side with that
-                object. Infomation can be in differnt forms of content such as
-                text, images and videos.
-              </p></a
-            >
+                <a class="image">
+                  <img
+                    src="images/aroundus-image/mock_detail_yellow_iphone12black_portrait.png"
+                    style="
+                      border-radius: 0%;
+                      width: 20rem;
+                      height: auto;
+                      margin-left: auto;
+                      margin-right: auto;
+                    "
+                /></a>
 
-            <a class="image"
-              ><img
-                src="images/aroundus-image/info3_mock.png"
-                style="
-                  border-radius: 0%;
-                  width: 20rem;
-                  height: auto;
-                  margin-left: auto;
-                  margin-right: auto;
-                "
-              />
-              <p
-                style="
-                  background-color: #2c2c2c;
-                  border-radius: 2rem;
-                  border-width: medium;
-                  border-color: #85fbac;
-                  border-style: solid;
-                  padding: 3%;
-                "
-              >
-                User can use their phone and point the camera to any places or
-                objects that they are interested. The app will try to recognize
-                those objects and pop up some infomation along side with that
-                object. Infomation can be in differnt forms of content such as
-                text, images and videos.
-              </p></a
-            >
+                <p
+                  style="
+                    background-color: #2c2c2c;
+                    border-radius: 2rem;
+                    border-width: medium;
+                    border-color: #85fbac;
+                    border-style: solid;
+                    padding: 3%;
+                  "
+                >
+                  Secondly, user will see their images add to the gallery view.
+                  User can tap the image and see the details. The details
+                  include title, subtitle, date of when user added the image and
+                  some notes.
+                </p>
+              </div>
+            </a>
 
-            <a class="image"
-              ><img
-                src="images/aroundus-image/info4_mock.png"
+            <a class="image">
+              <div
                 style="
-                  border-radius: 0%;
-                  width: 20rem;
-                  height: auto;
-                  margin-left: auto;
-                  margin-right: auto;
-                "
-              />
-              <p
-                style="
-                  background-color: #2c2c2c;
-                  border-radius: 2rem;
-                  border-width: medium;
-                  border-color: #85fbac;
-                  border-style: solid;
-                  padding: 3%;
+                  display: table-cell;
+                  vertical-align: middle;
+                  text-align: center;
                 "
               >
-                User can use their phone and point the camera to any places or
-                objects that they are interested. The app will try to recognize
-                those objects and pop up some infomation along side with that
-                object. Infomation can be in differnt forms of content such as
-                text, images and videos.
-              </p></a
-            >
+                <a class="image">
+                  <img
+                    src="images/aroundus-image/mock_detect_card_iphone12black_portrait.png"
+                    style="
+                      border-radius: 0%;
+                      width: 20rem;
+                      height: auto;
+                      margin-left: auto;
+                      margin-right: auto;
+                    "
+                /></a>
+
+                <a class="image">
+                  <img
+                    src="images/aroundus-image/card_details_mod.png"
+                    style="
+                      border-radius: 0%;
+                      width: 20rem;
+                      height: auto;
+                      margin-left: auto;
+                      margin-right: auto;
+                    "
+                /></a>
+
+                <p
+                  style="
+                    background-color: #2c2c2c;
+                    border-radius: 2rem;
+                    border-width: medium;
+                    border-color: #85fbac;
+                    border-style: solid;
+                    padding: 3%;
+                  "
+                >
+                  Thirdly, user can see the AR world by going to the AR tab. The
+                  app will start recognizes images from the app local storage
+                  and try to find those object in the real-world. If objects are
+                  matched, the info card will popup and display information
+                  about the image object.
+                </p>
+              </div>
+            </a>
+            <!-- Explain App -->
 
             <br /><br /><br /><br />
 
