edit video url of AR info cards to use GitLFS url

--- a/aroundus-sub.html
+++ b/aroundus-sub.html
@@ -76,7 +76,7 @@
 
               <h3 class="major">AR info cards</h3>
               <video
-                src="images/aroundus-image/aroundus-mov-info.MP4"
+                src="https://github.com/niabwork2/portfolio/raw/main/images/aroundus-image/aroundus-mov-info.MP4"
                 controls
                 style="width: 50%; height: 50%; border-radius: 10px"
               ></video>
