--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
       <section id="banner">
         <div class="inner">
           <div class="logo">
-            <span class="icon">
-              <img src="images/cat.jpg" alt="" style="border-radius: 50%;" />
+            <!-- <span class="icon"> -->
+              <!-- <img src="images/cat.jpg" alt="" style="border-radius: 50%;" /> -->
             </span>
           </div>
 
-          <h2>MY NAME IS NIAB</h2>
+          <h2>Hello! I'm Wasupon</h2>
+          <h3>You can also call me, Niab</h3>
           <p>Welcome to my Portfolio Website</p>
           <a href="#one" class="special">See my project</a>
         </div>
@@ -214,7 +215,7 @@
 
 <!--             <li class="icon solid fa-phone">(000) 000-0000</li> -->
             <li class="icon solid fa-envelope">
-              <a href="#">niabwork2@gmail.com</a>
+              <a href="#">wasupon1x1@gmail.com</a>
 			      </li>
 
             <li class="icon brands fa-github">
